--- a/frontend/src/styles/main.less
+++ b/frontend/src/styles/main.less
@@ -275,3 +275,7 @@
     text-decoration: underline;
   }
 }
+
+.ql-toolbar {
+  background: lighten(@primary-color, 40%);
+}
